Added scraper to nginx_proxy

--- a/nginx_proxy_manager/docker-compose.yml
+++ b/nginx_proxy_manager/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.5'
 services:
-  app:
+  nginx_proxy_manager:
     image: 'jc21/nginx-proxy-manager:latest'
+    container_name: nginx_proxy_manager
     restart: unless-stopped
     depends_on:
       - db
@@ -19,9 +20,22 @@ services:
     volumes:
       - ./data:/data
       - ./letsencrypt:/etc/letsencrypt
+      - ./nginx:/data/nginx/custom
     networks:
       - default
       - nginx
+  nginx_exporter:
+    image: 'nginx/nginx-prometheus-exporter:0.9.0'
+    depends_on:
+      - nginx_proxy_manager
+    expose:
+      - '9113'
+    networks:
+      - monitoring
+      - nginx
+    command: -nginx.scrape-uri=http://nginx_proxy_manager:8080/stub_status
+    labels:
+      org.label-schema.group: "monitoring"
   db:
     image: 'mariadb:10'
     restart: unless-stopped
@@ -35,4 +49,6 @@ services:
 
 networks:
   nginx:
+    external: true
+  monitoring:
     external: true
