--- a/dockprom/prometheus/alert.rules.example
+++ b/dockprom/prometheus/alert.rules.example
@@ -13,14 +13,13 @@ groups:
 - name: host
   rules:
   - alert: high_cpu_load
-    expr: node_load1 > 1.5
+    expr: node_load1 > 2
     for: 30s
     labels:
       severity: warning
     annotations:
       summary: "Server under high load"
       description: "Docker host is under high load, the avg load 1m is at {{ $value}}. Reported by instance {{ $labels.instance }} of job {{ $labels.job }}."
-
   - alert: high_memory_load
     expr: (sum(node_memory_MemTotal_bytes) - sum(node_memory_MemFree_bytes + node_memory_Buffers_bytes + node_memory_Cached_bytes) ) / sum(node_memory_MemTotal_bytes) * 100 > 85
     for: 30s
@@ -29,7 +28,6 @@ groups:
     annotations:
       summary: "Server memory is almost full"
       description: "Docker host memory usage is {{ humanize $value}}%. Reported by instance {{ $labels.instance }} of job {{ $labels.job }}."
-
   - alert: high_storage_load
     expr: (node_filesystem_size_bytes{fstype="ext4"} - node_filesystem_free_bytes{fstype="ext4"}) / node_filesystem_size_bytes{fstype="ext4"}  * 100 > 85
     for: 30s
@@ -49,3 +47,11 @@ groups:
     annotations:
       summary: "Nginx Proxy down"
       description: "Proxy Server is offline."
+  - alert: watchtower_offline
+    expr: absent(container_memory_usage_bytes{name="watchtower"})
+    for: 30s
+    labels:
+      severity: warning
+    annotations:
+      summary: "Watchtower not running"
+      description: "Watchtower is not running in the system, automatic image update is not available."
