--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.5'
 
 services:
   watchtower:
+    image: 'containrrr/watchtower'
     container_name: watchtower
-    image: containrrr/watchtower
     restart: unless-stopped
     volumes: 
       - /var/run/docker.sock:/var/run/docker.sock
