--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - '9000:9000'
     volumes: 
       - /var/run/docker.sock:/var/run/docker.sock
-      - portainer_data:/data
+      - data:/data
     command: ['--admin-password', "${PORTAINER_PASSWORD}"]
 
 volumes:
-  portainer_data:
+  data:
