--- a/dockprom/docker-compose.yml
+++ b/dockprom/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     labels:
       org.label-schema.group: "monitoring"
   cadvisor:
-    image: 'gcr.io/cadvisor/cadvisor:v0.42.0'
+    image: 'zcube/cadvisor:v0.37.5'
     restart: unless-stopped
     privileged: true
     devices:
