Now the old env works, no idea why.

--- a/watchtower/.env.example
+++ b/watchtower/.env.example
@@ -3,6 +3,6 @@
 TZ=Europe/Rome
 WATCHTOWER_CLEANUP=true
 WATCHTOWER_NO_STARTUP_MESSAGE=true
-WATCHTOWER_SCHEDULE="0 0 4 * * *"
+WATCHTOWER_SCHEDULE=0 0 4 * * *
 WATCHTOWER_NOTIFICATIONS=shoutrrr
 WATCHTOWER_NOTIFICATION_URL=
