--- a/nginx_proxy_manager/docker-compose.yml
+++ b/nginx_proxy_manager/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.5'
+
 services:
   nginx_proxy_manager:
     image: 'jc21/nginx-proxy-manager:latest'
@@ -33,7 +34,8 @@ services:
     networks:
       - monitoring
       - nginx
-    command: -nginx.scrape-uri=http://nginx_proxy_manager:8080/stub_status
+    command:
+      - '-nginx.scrape-uri=http://nginx_proxy_manager:8080/stub_status'
     labels:
       org.label-schema.group: "monitoring"
   db:
