--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     volumes: 
       - /var/run/docker.sock:/var/run/docker.sock
       - data:/data
-    command: ['--admin-password', "${PORTAINER_PASSWORD}"]
+    command: 
+      - '--admin-password ${PORTAINER_PASSWORD}'
 
 volumes:
   data:
