Fixed some configuration issues

--- a/nextcloud/.env.example
+++ b/nextcloud/.env.example
@@ -4,13 +4,15 @@ NEXTCLOUD_ADMIN_USER=admin
 NEXTCLOUD_ADMIN_PASSWORD=password
 
 ## Domain and proxy
-## More info available at 
-DOMAIN=tbailenas.ddns.net
-TRUSTED_PROXIES=${DOMAIN}
-OVERWRITEHOST=${DOMAIN}
+### More info available at
+### https://docs.nextcloud.com/server/latest/admin_manual/configuration_server/reverse_proxy_configuration.html
+TRUSTED_PROXIES=
+OVERWRITEHOST=
 OVERWRITEPROTOCOL=https
 
 ## Email
+### More info available at
+### https://docs.nextcloud.com/server/latest/admin_manual/configuration_server/email_configuration.html
 SMTP_HOST=
 SMTP_SECURE=
 SMTP_PORT=
