--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -3,26 +3,27 @@ version: '3.5'
 services:
   app:
     image: 'nextcloud'
+    container_name: nextcloud
     restart: unless-stopped
     depends_on:
-      - database
+      - db
     volumes:
       - data:/var/www/html
     env_file:
       - .env
     environment:
-      MYSQL_HOST: database
+      MYSQL_HOST: db
       MYSQL_DATABASE: nextcloud
       MYSQL_USER: nextcloud
       MYSQL_PASSWORD: nextcloud
     networks:
       - default
       - nginx
-  database:
-    image: 'mariadb:10.5'
+  db:
+    image: 'mariadb:10'
     restart: unless-stopped
     volumes:
-      - database:/var/lib/mysql
+      - db:/var/lib/mysql
     environment:
       MYSQL_RANDOM_ROOT_PASSWORD: 'true'
       MYSQL_DATABASE: nextcloud
@@ -38,4 +39,4 @@ networks:
 
 volumes:
   data:
-  database:
+  db:
