--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - data:/data
     command: 
-      - '--admin-password ${PORTAINER_PASSWORD}'
+      - '--admin-password=${PORTAINER_PASSWORD}'
 
 volumes:
   data:
