--- a/dockprom/prometheus/prometheus.yml.example
+++ b/dockprom/prometheus/prometheus.yml.example
@@ -30,6 +30,11 @@ scrape_configs:
     static_configs:
       - targets: ['pushgateway:9091']
 
+  - job_name: 'nginx'
+    scrape_interval: 10s
+    static_configs:
+      - targets: ['nginx_exporter:9113']
+
 alerting:
   alertmanagers:
   - scheme: http
