--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -12,26 +12,22 @@ services:
     env_file:
       - .env
     environment:
-      MYSQL_HOST: db
-      MYSQL_DATABASE: nextcloud
-      MYSQL_USER: nextcloud
-      MYSQL_PASSWORD: nextcloud
+      POSTGRES_HOST: db
+      POSTGRES_DB: nextcloud
+      POSTGRES_USER: nextcloud
+      POSTGRES_PASSWORD: nextcloud
     networks:
       - default
       - nginx
   db:
-    image: 'mariadb:10'
+    image: 'postgres'
     restart: unless-stopped
     volumes:
-      - db:/var/lib/mysql
+      - db:/var/lib/postgresql/data
     environment:
-      MYSQL_RANDOM_ROOT_PASSWORD: 'true'
-      MYSQL_DATABASE: nextcloud
-      MYSQL_USER: nextcloud
-      MYSQL_PASSWORD: nextcloud
-    command:
-      - '--transaction-isolation=READ-COMMITTED'
-      - '--binlog-format=ROW'
+      POSTGRES_DB: nextcloud
+      POSTGRES_USER: nextcloud
+      POSTGRES_PASSWORD: nextcloud
 
 networks:
   nginx:
