--- a/dockprom/docker-compose.yml
+++ b/dockprom/docker-compose.yml
@@ -62,6 +62,12 @@ services:
       - /sys:/sys:ro
       - /var/lib/docker:/var/lib/docker:ro
       - /cgroup:/cgroup:ro
+    command:
+      - '--housekeeping_interval=10s'
+      - '--max_housekeeping_interval=1m'
+      - '--allow_dynamic_housekeeping=true'
+      - '--storage_duration=1s'
+      - '--docker_only=true'
     networks:
       - monitoring
     labels:
