Added admin user tadmin user to paperless

--- a/paperless_ng/.env.example
+++ b/paperless_ng/.env.example
@@ -5,6 +5,11 @@
 USERMAP_UID=1000
 USERMAP_GID=1000
 
+# User configuration for admin account
+PAPERLESS_ADMIN_USER=admin
+PAPERLESS_ADMIN_MAIL=root@localhost
+PAPERLESS_ADMIN_PASSWORD=password
+
 # Paperless settings
 # Use this variable to set a timezone for the Paperless Docker containers. If not specified, defaults to UTC.
 PAPERLESS_TIME_ZONE=Europe/Rome
