--- a/nginx_proxy_manager/docker-compose.yml
+++ b/nginx_proxy_manager/docker-compose.yml
@@ -12,19 +12,19 @@ services:
       - '443:443'
       - '81:81'
     environment:
-      DB_MYSQL_HOST: 'db'
+      DB_MYSQL_HOST: 'database'
       DB_MYSQL_PORT: 3306
       DB_MYSQL_USER: 'nginx_proxy_manager'
       DB_MYSQL_PASSWORD: 'nginx_proxy_manager'
       DB_MYSQL_NAME: 'nginx_proxy_manager'
     volumes:
-      - ./data/nginx:/data
-      - ./data/letsencrypt:/etc/letsencrypt
       - ./nginx:/data/nginx/custom
+      - nginx:/data
+      - letsenctypt:/etc/letsencrypt
     networks:
       - default
       - nginx
-  db:
+  database:
     image: 'mariadb:10.6'
     restart: unless-stopped
     environment:
@@ -33,7 +33,12 @@ services:
       MYSQL_USER: 'nginx_proxy_manager'
       MYSQL_PASSWORD: 'nginx_proxy_manager'
     volumes:
-      - ./data/mysql:/var/lib/mysql
+      - database:/var/lib/mysql
+
+volumes:
+  nginx:
+  letsenctypt:
+  database:
 
 networks:
   nginx:
