--- a/streaming_service/docker-compose.yml
+++ b/streaming_service/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - '9117:9117'
     volumes:
-      - ./config/jackett:/config/Jackett
+      - jackett:/config/Jackett
     env_file:
       - .env
   transmission:
@@ -17,7 +17,7 @@ services:
       - '9091:9091'
     volumes: 
       - ./data:/mnt/data
-      - ./config/transmission:/config
+      - transmission:/config
     logging:
       driver: json-file
       options:
@@ -33,7 +33,7 @@ services:
     ports:
       - '8989:8989'
     volumes:
-      - ./config/sonarr:/config
+      - sonarr:/config
       - ./data:/mnt/data
     env_file:
       - .env
@@ -46,7 +46,7 @@ services:
     ports:
       - '7878:7878'
     volumes:
-      - ./config/radarr:/config
+      - radarr:/config
       - ./data:/mnt/data
     env_file:
       - .env
@@ -56,7 +56,7 @@ services:
     ports:
       - '6767:6767'
     volumes:
-      - ./config/bazarr:/config
+      - bazarr:/config
       - ./data/media/movies:/mnt/data/media/movies
       - ./data/media/tv:/mnt/data/media/tv
     env_file:
@@ -71,7 +71,7 @@ services:
       - '1900:1900/udp'
     volumes:
       - ./data/media:/mnt/media
-      - ./config/jellyfin:/config
+      - jellyfin:/config
       - /opt/vc/lib:/opt/vc/lib
     devices:
       - /dev/vchiq:/dev/vchiq
@@ -80,3 +80,11 @@ services:
       - /dev/video12:/dev/video12
     env_file:
       - .env
+
+volumes:
+  jackett:
+  transmission:
+  sonarr:
+  radarr:
+  bazarr:
+  jellyfin:
