--- a/nginx_proxy_manager/docker-compose.yml
+++ b/nginx_proxy_manager/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: nginx_proxy_manager
     restart: unless-stopped
     depends_on:
-      - db
+      - database
     ports:
       - '80:80'
       - '443:443'
