--- a/paperless_ng/docker-compose.yml
+++ b/paperless_ng/docker-compose.yml
@@ -7,11 +7,10 @@ services:
   
   paperless:
     image: 'jonaswinkler/paperless-ng'
+    container_name: paperless
     restart: unless-stopped
     depends_on:
       - scheduler
-    ports:
-     - '8000:8000'
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000"]
       interval: 30s
@@ -22,6 +21,9 @@ services:
       - media:/usr/src/paperless/media
       - ./export:/usr/src/paperless/export
       - ./consume:/usr/src/paperless/consume
+    networks:
+      - default
+      - nginx
     env_file:
       - .env
     environment:
@@ -30,3 +32,7 @@ services:
 volumes:
   data:
   media:
+
+networks:
+  nginx:
+    external: true
