--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - pihole:/etc/pihole
       - dnsmasq:/etc/dnsmasq.d
     env_file: .env
+    environment:
+      DNSMASQ_LISTENING: all
 
 volumes:
   pihole:
