--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -5,13 +5,17 @@ services:
     image: 'portainer/portainer-ce'
     container_name: portainer
     restart: unless-stopped
-    ports: 
-      - '9000:9000'
     volumes: 
       - /var/run/docker.sock:/var/run/docker.sock
       - data:/data
+    networks:
+      - nginx
     command: 
       - '--admin-password=${PORTAINER_PASSWORD}'
 
 volumes:
   data:
+
+networks:
+  nginx:
+    external: true
