--- a/fireflyIII/docker-compose.yml
+++ b/fireflyIII/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     restart: unless-stopped
     volumes:
       - upload:/var/www/html/storage/upload
+    networks:
+      - default
+      - nginx
     env_file: .env
     depends_on:
       - db
@@ -20,6 +23,11 @@ services:
       - MYSQL_DATABASE=${DB_DATABASE}
     volumes:
       - db:/var/lib/mysql
+
 volumes:
    upload:
    db:
+
+networks:
+  nginx:
+    external: true
