Updated portainer for traefik

--- a/portainer/.env.example
+++ b/portainer/.env.example
@@ -1,2 +1,6 @@
+## Traefik Settings
+TRAEFIK_DOMAIN=
+
+## Portainer Settings
 # Generate this with "htpasswd -nb -B admin "<your password>" | cut -d ":" -f 2"
 PORTAINER_PASSWORD=
