Updated vaultwarden for nginx

--- a/vaultwarden/.env.example
+++ b/vaultwarden/.env.example
@@ -1,3 +1,7 @@
+## Traefik settings
+VAULTWARDEN_DOMAIN=vaultwarden.localhost
+
+## VaultWarden settings
 # Admin token, can be generated with 'openssl rand -base64 48'
 # DO NOT SHARE THIS, allows admin access to the instance
 # https://github.com/dani-garcia/vaultwarden/wiki/Enabling-admin-page
