Added streaming service support

--- a/streaming_service/.env.example
+++ b/streaming_service/.env.example
@@ -1,3 +1,12 @@
+## Traefik Settings
+PROWLARR_DOMAIN=prowlarr.localhost
+TRANSMISSION_DOMAIN=transmission.localhost
+SONARR_DOMAIN=sonarr.localhost
+RADARR_DOMAIN=radarr.localhost
+BAZARR_DOMAIN=bazarr.localhost
+JELLYFIN_DOMAIN=jellyfin.localhost
+
+## General 
 PUID=1000
 PGID=1000
 TZ=Europe/Rome
