Edited pihole adding traefik support

--- a/pihole/.env.example
+++ b/pihole/.env.example
@@ -1,7 +1,10 @@
+## Traefik Settings
+PIHOLE_DOMAIN=pihole.localhost
+
+## Pihole Settings
 TZ=Europe/Rome
 WEBPASSWORD=
 FTLCONF_REPLY_ADDR4=
-
 ADMIN_EMAIL=
 PIHOLE_DNS_=1.1.1.1;8.8.8.8
 WEBTHEME=default-dark
