--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -2,9 +2,11 @@ version: '3.5'
 
 services:
   pihole:
-    image: 'pihole/pihole:latest'
-    container_name: pihole
+    image: pihole/pihole:latest
     restart: unless-stopped
+    networks:
+      - default
+      - reverse_proxy
     ports:
       - '53:53/tcp'
       - '53:53/udp'
@@ -12,17 +14,26 @@ services:
     volumes:
       - pihole:/etc/pihole
       - dnsmasq:/etc/dnsmasq.d
-    networks:
-      - default
-      - nginx
     env_file: .env
     environment:
       DNSMASQ_LISTENING: all
+    labels:
+      - "traefik.enable=true"
+      # HTTP router
+      - "traefik.http.routers.pihole.entrypoints=web"
+      - "traefik.http.routers.pihole.rule=Host(`${PIHOLE_DOMAIN:-pihole.localhost}`)"
+      - "traefik.http.routers.pihole.middlewares=local-service@file,force-http@file"
+      - "traefik.http.services.pihole.loadbalancer.server.port=9696"
+      # HTTPS router
+      - "traefik.http.routers.pihole-https.entrypoints=websecure"
+      - "traefik.http.routers.pihole-https.rule=Host(`${PIHOLE_DOMAIN:-pihole.localhost}`)"
+      - "traefik.http.routers.pihole-https.tls=true"
+      - "traefik.http.routers.pihole-https.middlewares=local-service@file,force-http@file"
 
 volumes:
   pihole:
   dnsmasq:
 
 networks:
-  nginx:
+  reverse_proxy:
     external: true
