--- a/fireflyIII/.env.example
+++ b/fireflyIII/.env.example
@@ -1,3 +1,7 @@
+## Traefik Settings
+FIREFLYIII_DOMAIN=
+
+## Fireflyiii Settings
 # You can leave this on "local". If you change it to production most console commands will ask for extra confirmation.
 # Never set it to "testing".
 APP_ENV=local
