Updated domain variable

--- a/portainer/.env.example
+++ b/portainer/.env.example
@@ -1,5 +1,5 @@
 ## Traefik Settings
-TRAEFIK_DOMAIN=
+PORTAINER_DOMAIN=
 
 ## Portainer Settings
 # Generate this with "htpasswd -nb -B admin "<your password>" | cut -d ":" -f 2"
