--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -15,12 +15,12 @@ services:
       - "traefik.enable=true"
       # HTTP router
       - "traefik.http.routers.portainer.entrypoints=web"
-      - "traefik.http.routers.portainer.rule=Host(`${TRAEFIK_DOMAIN:-portainer.localhost}`)"
+      - "traefik.http.routers.portainer.rule=Host(`${PORTAINER_DOMAIN:-portainer.localhost}`)"
       - "traefik.http.routers.portainer.middlewares=local-service@file,force-http@file"
       - "traefik.http.services.portainer.loadbalancer.server.port=9000"
       # HTTPS router
       - "traefik.http.routers.portainer-https.entrypoints=websecure"
-      - "traefik.http.routers.portainer-https.rule=Host(`${TRAEFIK_DOMAIN:-portainer.localhost}`)"
+      - "traefik.http.routers.portainer-https.rule=Host(`${PORTAINER_DOMAIN:-portainer.localhost}`)"
       - "traefik.http.routers.portainer-https.tls=true"
       - "traefik.http.routers.portainer-https.middlewares=local-service@file,force-http@file"
 
