--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.5'
 
 services:
   portainer:
-    image: 'portainer/portainer-ce'
+    image: portainer/portainer-ce
     restart: unless-stopped
     networks:
       - reverse_proxy
