--- a/streaming_service/docker-compose.yml
+++ b/streaming_service/docker-compose.yml
@@ -26,8 +26,8 @@ services:
       - default
       - reverse_proxy
     volumes:
-      - ./config/transmission:/config
-      - ./data:/mnt/data
+      - transmission:/config
+      - ./data/downloads:/downloads
     logging:
       driver: json-file
       options:
@@ -53,7 +53,8 @@ services:
       - reverse_proxy
     volumes:
       - sonarr:/config
-      - ./data:/mnt/data
+      - ./data/media/tv:/tv
+      - ./data/downloads:/downloads
     env_file:
       - .env
     labels:
@@ -75,7 +76,8 @@ services:
       - reverse_proxy
     volumes:
       - radarr:/config
-      - ./data:/mnt/data
+      - ./data/media/movies:/movies
+      - ./data/downloads:/downloads
     env_file:
       - .env
     labels:
@@ -137,6 +139,7 @@ volumes:
   radarr:
   bazarr:
   jellyfin:
+  transmission:
 
 networks:
   reverse_proxy:
