Added paperless to traefik

--- a/paperless_ng/.env.example
+++ b/paperless_ng/.env.example
@@ -1,4 +1,7 @@
-# Docker settings
+## Traefik Settings
+PAPERLESS_DOMAIN=
+
+## Docker Settings
 # The UID and GID of the user used to run paperless in the container. Set this
 # to your UID and GID on the host so that you have write access to the
 # consumption directory.
@@ -10,7 +13,7 @@ PAPERLESS_ADMIN_USER=admin
 PAPERLESS_ADMIN_MAIL=root@localhost
 PAPERLESS_ADMIN_PASSWORD=password
 
-# Paperless settings
+## Paperless Settings
 # Use this variable to set a timezone for the Paperless Docker containers. If not specified, defaults to UTC.
 PAPERLESS_TIME_ZONE=Europe/Rome
 
