--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - "traefik.http.routers.pihole.entrypoints=web"
       - "traefik.http.routers.pihole.rule=Host(`${PIHOLE_DOMAIN:-pihole.localhost}`)"
       - "traefik.http.routers.pihole.middlewares=local-service@file,force-http@file"
+      - "traefik.http.services.pihole.loadbalancer.server.port=80"
 
 volumes:
   pihole:
