--- a/dockprom/.env.example
+++ b/dockprom/.env.example
@@ -1,4 +1,4 @@
-## Traefik
+## Traefik Settings
 PROMETHEUS_DOMAIN=prometheus.localhost
 ALERTMANAGER_DOMAIN=alertmanager.localhost
 GRAFANA_DOMAIN=grafana.localhost
