--- a/dockprom/docker-compose.yml
+++ b/dockprom/docker-compose.yml
@@ -4,6 +4,9 @@ services:
   prometheus:
     image: 'prom/prometheus:v2.30.3'
     restart: unless-stopped
+    networks:
+      - monitoring
+      - reverse_proxy
     volumes:
       - ./prometheus:/etc/prometheus
       - prometheus:/prometheus
@@ -14,49 +17,36 @@ services:
       - '--web.console.templates=/etc/prometheus/consoles'
       - '--storage.tsdb.retention.time=200h'
       - '--web.enable-lifecycle'
-    networks:
-      - monitoring
-      - reverse_proxy
     labels:
       - "org.label-schema.group=monitoring"
       ## Traefik
       - "traefik.enable=true"
       # HTTP router
-      - "traefik.http.routers.portainer.entrypoints=web"
-      - "traefik.http.routers.portainer.rule=Host(`${PROMETHEUS_DOMAIN:-prometheus.localhost}`)"
-      - "traefik.http.routers.portainer.middlewares=local-service@file,force-http@file"
-      - "traefik.http.services.portainer.loadbalancer.server.port=9090"
-      # HTTPS router
-      - "traefik.http.routers.portainer-https.entrypoints=websecure"
-      - "traefik.http.routers.portainer-https.rule=Host(`${PROMETHEUS_DOMAIN:-prometheus.localhost}`)"
-      - "traefik.http.routers.portainer-https.tls=true"
-      - "traefik.http.routers.portainer-https.middlewares=local-service@file,force-http@file"
+      - "traefik.http.routers.prometheus.entrypoints=web"
+      - "traefik.http.routers.prometheus.rule=Host(`${PROMETHEUS_DOMAIN:-prometheus.localhost}`)"
+      - "traefik.http.routers.prometheus.middlewares=local-service@file,force-http@file"
+      - "traefik.http.services.prometheus.loadbalancer.server.port=9090"
       
   alertmanager:
     image: 'prom/alertmanager:v0.23.0'
     restart: unless-stopped
+    networks:
+      - monitoring
+      - reverse_proxy
     volumes:
       - ./alertmanager:/etc/alertmanager
     command:
       - '--config.file=/etc/alertmanager/config.yml'
       - '--storage.path=/alertmanager'
-    networks:
-      - monitoring
-      - reverse_proxy
     labels:
       - "org.label-schema.group=monitoring"
       ## Traefik
       - "traefik.enable=true"
       # HTTP router
-      - "traefik.http.routers.portainer.entrypoints=web"
-      - "traefik.http.routers.portainer.rule=Host(`${ALERTMANAGER_DOMAIN:-alertmanager.localhost}`)"
-      - "traefik.http.routers.portainer.middlewares=local-service@file,force-http@file"
-      - "traefik.http.services.portainer.loadbalancer.server.port=9093"
-      # HTTPS router
-      - "traefik.http.routers.portainer-https.entrypoints=websecure"
-      - "traefik.http.routers.portainer-https.rule=Host(`${ALERTMANAGER_DOMAIN:-alertmanager.localhost}`)"
-      - "traefik.http.routers.portainer-https.tls=true"
-      - "traefik.http.routers.portainer-https.middlewares=local-service@file,force-http@file"
+      - "traefik.http.routers.alertmanager.entrypoints=web"
+      - "traefik.http.routers.alertmanager.rule=Host(`${ALERTMANAGER_DOMAIN:-alertmanager.localhost}`)"
+      - "traefik.http.routers.alertmanager.middlewares=local-service@file,force-http@file"
+      - "traefik.http.services.alertmanager.loadbalancer.server.port=9093"
 
   nodeexporter:
     image: 'prom/node-exporter:v1.2.2'
@@ -117,15 +107,10 @@ services:
       ## Traefik
       - "traefik.enable=true"
       # HTTP router
-      - "traefik.http.routers.portainer.entrypoints=web"
-      - "traefik.http.routers.portainer.rule=Host(`${GRAFANA_DOMAIN:-grafana.localhost}`)"
-      - "traefik.http.routers.portainer.middlewares=local-service@file,force-http@file"
-      - "traefik.http.services.portainer.loadbalancer.server.port=3000"
-      # HTTPS router
-      - "traefik.http.routers.portainer-https.entrypoints=websecure"
-      - "traefik.http.routers.portainer-https.rule=Host(`${GRAFANA_DOMAIN:-grafana.localhost}`)"
-      - "traefik.http.routers.portainer-https.tls=true"
-      - "traefik.http.routers.portainer-https.middlewares=local-service@file,force-http@file"
+      - "traefik.http.routers.grafana.entrypoints=web"
+      - "traefik.http.routers.grafana.rule=Host(`${GRAFANA_DOMAIN:-grafana.localhost}`)"
+      - "traefik.http.routers.grafana.middlewares=local-service@file,force-http@file"
+      - "traefik.http.services.grafana.loadbalancer.server.port=3000"
 
   pushgateway:
     image: prom/pushgateway:v1.4.2
@@ -141,6 +126,5 @@ volumes:
 
 networks:
   monitoring:
-    external: true
   reverse_proxy:
     external: true
